fix: achievments visibility.

--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ body {
     padding: 16px 24px;
     color: var(--color-accent-100);
 
-    &:nth-child(1) {
+    &:nth-of-type(1) {
       border-inline-start: 1px solid var(--color-primary-stroke);
     }
 
@@ -539,10 +539,10 @@ body {
         height: 149px;
         width: 100%;
         corner-shape: bevel;
-        border-top-left-radius: 60%;
+        border-start-end-radius: 60% ;
         background: var(--color-accent-50);
         color: var(--color-primary-background-texts);
-        padding-inline-start: 22px;
+        padding-inline: 22px;
         transition: opacity .4s ease;
         
 
@@ -571,8 +571,8 @@ body {
         background: var(--color-accent-100);
         width: 100%;
         height: 100%;
-        right: -14px;
-        bottom: -14px;
+        inset-inline-start: -14px;
+        inset-block-end: -14px;
         opacity: 0;
         transition: opacity .4s ease;
       }
